[gd_scene load_steps=28 format=3 uid="uid://baaborxpf7j3w"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_uvlbn"]
[ext_resource type="Texture2D" uid="uid://cvylqj6ph7v6d" path="res://Assets/Buttons/Button_Default.png" id="2_l1cmi"]
[ext_resource type="Texture2D" uid="uid://bev4kwk7we2x7" path="res://Assets/Buttons/Button_Clicked.png" id="3_ks5t0"]
[ext_resource type="Texture2D" uid="uid://d6rm8iubk5fj" path="res://Assets/Buttons/Button_Hovered.png" id="4_nyqga"]
[ext_resource type="Texture2D" uid="uid://1xrcaqipryf0" path="res://Assets/Buttons/Button_Disabled.png" id="5_vi5n4"]
[ext_resource type="Texture2D" uid="uid://cff656hut0g06" path="res://Assets/Buttons/Button_Focused.png" id="6_fqhd7"]
[ext_resource type="BitMap" uid="uid://dtf335br4pmn8" path="res://Assets/Buttons/Button_Bitmap.png" id="7_d65h6"]
[ext_resource type="Texture2D" uid="uid://ccm2u70hycoij" path="res://icon.svg" id="8_63ptr"]
[ext_resource type="Texture2D" uid="uid://cgw2pf75mdkgo" path="res://Assets/Sprites/chip/chip.png" id="9_q7o7n"]

[sub_resource type="InputEventAction" id="InputEventAction_d7fav"]
action = &"UseLeft"

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_p62a0"]
button_index = 2

[sub_resource type="Shortcut" id="Shortcut_iehtw"]
events = [SubResource("InputEventAction_d7fav"), SubResource("InputEventJoypadButton_p62a0")]

[sub_resource type="InputEventAction" id="InputEventAction_yd1gi"]
action = &"UseDown"

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_f16i0"]
device = 1

[sub_resource type="Shortcut" id="Shortcut_slnyq"]
events = [SubResource("InputEventAction_yd1gi"), SubResource("InputEventJoypadButton_f16i0")]

[sub_resource type="InputEventAction" id="InputEventAction_5dhc6"]
action = &"UseRight"

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_07pu4"]
device = 1
button_index = 1

[sub_resource type="Shortcut" id="Shortcut_1ax0q"]
events = [SubResource("InputEventAction_5dhc6"), SubResource("InputEventJoypadButton_07pu4")]

[sub_resource type="InputEventAction" id="InputEventAction_orixy"]
action = &"UseUp"

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_2es5d"]
device = 1
button_index = 3

[sub_resource type="Shortcut" id="Shortcut_52udb"]
events = [SubResource("InputEventAction_orixy"), SubResource("InputEventJoypadButton_2es5d")]

[sub_resource type="InputEventAction" id="InputEventAction_ergpa"]
action = &"Hit"

[sub_resource type="Shortcut" id="Shortcut_u8kjv"]
events = [SubResource("InputEventAction_ergpa")]

[sub_resource type="LabelSettings" id="LabelSettings_x0fix"]
font_size = 30

[sub_resource type="InputEventAction" id="InputEventAction_c3b7o"]
action = &"Stand"

[sub_resource type="Shortcut" id="Shortcut_y2ttc"]
events = [SubResource("InputEventAction_c3b7o")]

[sub_resource type="LabelSettings" id="LabelSettings_8thmw"]
font_size = 30

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uvlbn")

[node name="Button_Left" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = 494.0
offset_right = 252.0
offset_bottom = 674.0
scale = Vector2(0.5, 0.5)
shortcut = SubResource("Shortcut_iehtw")
texture_normal = ExtResource("2_l1cmi")
texture_pressed = ExtResource("3_ks5t0")
texture_hover = ExtResource("4_nyqga")
texture_disabled = ExtResource("5_vi5n4")
texture_focused = ExtResource("6_fqhd7")
texture_click_mask = ExtResource("7_d65h6")
ignore_texture_size = true
stretch_mode = 5

[node name="InputSymbol_Left" type="Sprite2D" parent="Button_Left"]
self_modulate = Color(0.270588, 1, 0, 1)
position = Vector2(28, 96)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_63ptr")

[node name="AbilitySymbol_Left" type="Sprite2D" parent="Button_Left"]
position = Vector2(116, 86)
texture = ExtResource("9_q7o7n")

[node name="Button_Down" type="TextureButton" parent="."]
offset_left = 68.0
offset_top = 514.0
offset_right = 328.0
offset_bottom = 704.0
scale = Vector2(0.5, 0.5)
shortcut = SubResource("Shortcut_slnyq")
texture_normal = ExtResource("2_l1cmi")
texture_pressed = ExtResource("3_ks5t0")
texture_hover = ExtResource("4_nyqga")
texture_disabled = ExtResource("5_vi5n4")
texture_focused = ExtResource("6_fqhd7")
texture_click_mask = ExtResource("7_d65h6")
ignore_texture_size = true
stretch_mode = 5

[node name="InputSymbol_Down" type="Sprite2D" parent="Button_Down"]
self_modulate = Color(0.270588, 1, 0, 1)
position = Vector2(126, 186)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_63ptr")

[node name="AbilitySymbol_Down" type="Sprite2D" parent="Button_Down"]
position = Vector2(128, 90)
texture = ExtResource("9_q7o7n")

[node name="Button_Right" type="TextureButton" parent="."]
offset_left = 139.0
offset_top = 495.0
offset_right = 337.0
offset_bottom = 679.0
scale = Vector2(0.5, 0.5)
shortcut = SubResource("Shortcut_1ax0q")
texture_normal = ExtResource("2_l1cmi")
texture_pressed = ExtResource("3_ks5t0")
texture_hover = ExtResource("4_nyqga")
texture_disabled = ExtResource("5_vi5n4")
texture_focused = ExtResource("6_fqhd7")
texture_click_mask = ExtResource("7_d65h6")
stretch_mode = 5

[node name="InputSymbol_Right" type="Sprite2D" parent="Button_Right"]
self_modulate = Color(0.270588, 1, 0, 1)
position = Vector2(192, 94)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_63ptr")

[node name="AbilitySymbol_Right" type="Sprite2D" parent="Button_Right"]
position = Vector2(96, 88)
texture = ExtResource("9_q7o7n")

[node name="Button_Up" type="TextureButton" parent="."]
offset_left = 87.0
offset_top = 453.0
offset_right = 271.0
offset_bottom = 675.0
scale = Vector2(0.5, 0.5)
shortcut = SubResource("Shortcut_52udb")
texture_normal = ExtResource("2_l1cmi")
texture_pressed = ExtResource("3_ks5t0")
texture_hover = ExtResource("4_nyqga")
texture_disabled = ExtResource("5_vi5n4")
texture_focused = ExtResource("6_fqhd7")
texture_click_mask = ExtResource("7_d65h6")
ignore_texture_size = true
stretch_mode = 5

[node name="InputSymbol_Up" type="Sprite2D" parent="Button_Up"]
self_modulate = Color(0.270588, 1, 0, 1)
position = Vector2(92, 18)
scale = Vector2(0.59375, 0.5625)
texture = ExtResource("8_63ptr")

[node name="AbilitySymbol_Up" type="Sprite2D" parent="Button_Up"]
position = Vector2(90, 110)
texture = ExtResource("9_q7o7n")

[node name="Info_Active" type="RichTextLabel" parent="."]
offset_left = 960.0
offset_top = 5.0
offset_right = 1144.0
offset_bottom = 215.0
tooltip_text = "Active Abilities Detailed:


f"
focus_mode = 1
mouse_default_cursor_shape = 16
text = "Active Abilities:
"
scroll_active = false
drag_and_drop_selection_enabled = false

[node name="Info_Passive" type="RichTextLabel" parent="."]
offset_left = 964.0
offset_top = 435.0
offset_right = 1148.0
offset_bottom = 645.0
tooltip_text = "Passive Abilities Detailed:


"
focus_mode = 1
mouse_default_cursor_shape = 16
text = "Passive Abilities:
"
scroll_active = false
drag_and_drop_selection_enabled = false

[node name="HitButton" type="TextureButton" parent="."]
offset_left = 380.0
offset_top = 526.0
offset_right = 612.0
offset_bottom = 706.0
scale = Vector2(0.5, 0.5)
shortcut = SubResource("Shortcut_u8kjv")
texture_normal = ExtResource("2_l1cmi")
texture_pressed = ExtResource("3_ks5t0")
texture_hover = ExtResource("4_nyqga")
texture_disabled = ExtResource("5_vi5n4")
texture_focused = ExtResource("6_fqhd7")
texture_click_mask = ExtResource("7_d65h6")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="HitButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.185
offset_left = 94.0
offset_top = -10.0
offset_right = 94.08
offset_bottom = 32.0
text = "Hit
"
label_settings = SubResource("LabelSettings_x0fix")

[node name="StandButton" type="TextureButton" parent="."]
offset_left = 476.0
offset_top = 526.0
offset_right = 708.0
offset_bottom = 706.0
scale = Vector2(0.5, 0.5)
shortcut = SubResource("Shortcut_y2ttc")
texture_normal = ExtResource("2_l1cmi")
texture_pressed = ExtResource("3_ks5t0")
texture_hover = ExtResource("4_nyqga")
texture_disabled = ExtResource("5_vi5n4")
texture_focused = ExtResource("6_fqhd7")
texture_click_mask = ExtResource("7_d65h6")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="StandButton"]
layout_mode = 0
offset_left = 74.0
offset_top = -6.0
offset_right = 157.0
offset_bottom = 36.0
text = "Stand"
label_settings = SubResource("LabelSettings_8thmw")

[node name="DealerHand" type="Label" parent="."]
offset_left = 455.0
offset_top = 29.0
offset_right = 495.0
offset_bottom = 52.0

[node name="PlayerHand" type="Label" parent="."]
offset_left = 474.0
offset_top = 465.0
offset_right = 514.0
offset_bottom = 488.0

[connection signal="pressed" from="Button_Left" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="Button_Down" to="." method="_on_button_down_pressed"]
[connection signal="pressed" from="Button_Right" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="Button_Up" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="StandButton" to="." method="_on_stand_button_pressed"]
